[package]
name = "os"
version = "0.1.0"
authors = ["Wycer <wycers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.3.9"
spin = "0.5.2"
bitflags = "1.2.1"
bit_field = "0.10.0"
hashbrown = "0.9"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
